--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:name=".activity.CanteenApplication"
@@ -63,6 +65,11 @@
             android:launchMode="singleTask"
             android:windowSoftInputMode="stateAlwaysVisible"
             android:screenOrientation="portrait"/>
+
+
+        <!-- 下载apk -->
+        <service
+            android:name=".service.DownLoadService"/>
     </application>
 
 </manifest>
