--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,6 +86,13 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysVisible" />
 
+        <!-- 修改密码 -->
+        <activity
+            android:name=".activity.MyAddressActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
+
+
 
         <!-- 下载apk -->
         <service android:name=".service.DownLoadService" />
