--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,24 +86,23 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysVisible" />
 
-        <!-- 修改密码 -->
+        <!-- 我的收货地址 -->
         <activity
             android:name=".activity.MyAddressActivity"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
 
+        <!-- 新增收货地址 -->
+        <activity
+            android:name=".activity.AddAddressActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" />
 
 
         <!-- 下载apk -->
         <service android:name=".service.DownLoadService" />
 
-        <receiver
-            android:name=".receiver.UpdateClickBroadCastReceiver">
-        </receiver>
-
-
-
-
+        <receiver android:name=".receiver.UpdateClickBroadCastReceiver"></receiver>
 
 
         <meta-data
