--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.0.1'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
     compile files('libs/BaiduLBS_Android.jar')
+    compile files('libs/xUtils-2.6.14.jar')
 }
