--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
     compile files('libs/BaiduLBS_Android.jar')
     compile files('libs/xUtils-2.6.14.jar')
+    compile files('libs/alipaySdk-20170309.jar')
 }
