--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
     compile files('libs/BaiduLBS_Android.jar')
     compile files('libs/xUtils-2.6.14.jar')
     compile files('libs/alipaySdk-20170309.jar')
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
